# Lectrack

./: .gitignore  README.md
backend/: manage.py  pyproject.toml
backend/lectrackAPI/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
